--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.superpowered.superpoweredlatency"
-    android:versionCode="2"
-    android:versionName="1.1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.superpowered.superpoweredlatency">
 
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
