--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 11
         targetSdkVersion 21
         versionCode 3
-        versionName "1.4"
+        versionName "1.4.2"
 
         sourceSets.main {
             jniLibs.srcDir 'src/main/libs'
@@ -24,9 +24,10 @@ android {
         }
     }
     task ndkBuild(type: Exec) {
-        commandLine '/android/ndk/ndk-build', '-B', '-C', file('src/main/jni').absolutePath
-// Windows users:
-// commandLine 'C:\\Android\\ndk\\ndk-build.cmd', '-B', '-C', file('src/main/jni').absolutePath
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        def ndkDir = properties.getProperty('ndk.dir')
+        commandLine "$ndkDir/ndk-build", '-B', '-C', file('src/main/jni').absolutePath
     }
 
     lintOptions {
