--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -1,15 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.superpowered.superpoweredlatency"
         minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 4
-        versionName "1.9"
+        targetSdkVersion 28
+        versionCode 5
+        versionName "1.9.1"
+
+        ndk { // these platforms cover 99% percent of all Android devices
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
 
         externalNativeBuild {
             cmake {
@@ -20,24 +24,14 @@ android {
         }
     }
 
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['src/main/jni']
-        }
-    }
-
     externalNativeBuild {
         cmake {
             path 'src/main/jni/CMakeLists.txt'
         }
     }
-
-    lintOptions {
-        disable 'SetTextI18n'
-    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:appcompat-v7:27.1.1'
 }
