--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -1,14 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
@@ -16,7 +16,8 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url 'https://maven.google.com'
+            url 'https://maven.google.com/'
+            name 'Google'
         }
     }
 }
