--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/icon_title"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
